--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ideastation",
+  "name": "antd-visual",
   "version": "0.1.0",
   "type": "module",
   "scripts": {
@@ -7,7 +7,6 @@
     "build": "vite build"
   },
   "dependencies": {
-    "@xyflow/react": "^12.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
