--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vite build"
   },
   "dependencies": {
+    "mobx": "^6.13.3",
+    "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
