--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@ant-design/pro-components": "^2.7.19",
+    "antd": "^5.21.2",
     "mobx": "^6.13.3",
     "mobx-react-lite": "^4.0.7",
     "normalize.css": "^8.0.1",
