--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@ant-design/pro-components": "^2.7.19",
     "antd": "^5.21.2",
     "mobx": "^6.13.3",
