--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mobx-react-lite": "^4.0.7",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
