--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "@ant-design/pro-components": "^2.7.19",
+    "amis-editor": "^6.9.0-rc.10",
     "antd": "^5.21.2",
     "mobx": "^6.13.3",
+    "mobx-react": "^9.1.1",
     "mobx-react-lite": "^4.0.7",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
