--- a/package.json
+++ b/package.json
@@ -1,35 +1,15 @@
 {
-  "name": "antd-visual",
+  "name": "antd-park",
+  "private": true,
   "version": "0.1.0",
   "type": "module",
+  "workspaces": [
+    "packages/chat"
+  ],
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "build:plugin1": "node src/plugin/build/index.js --watch",
-    "build:plugin": "cd package/plugin && npm run build"
-  },
-  "dependencies": {
-    "@ant-design/icons": "^5.5.1",
-    "@ant-design/pro-components": "^2.7.19",
-    "antd": "^5.21.2",
-    "mobx": "^6.13.3",
-    "mobx-react-lite": "^4.0.7",
-    "normalize.css": "^8.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "dev:chat": "cd packages/chat && vite"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "chokidar": "^4.0.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.3",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "vite": "^5.3.4",
-    "vite-plugin-svgr": "^4.3.0",
-    "ws": "^8.18.0"
+    "vite": "^6.0.1"
   }
 }
