--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.1.0",
   "type": "module",
   "workspaces": [
-    "packages/chat"
+    "./packages/chat-ai"
   ],
   "scripts": {
-    "dev:chat": "cd packages/chat && vite"
+    "dev:chatAI": "cd ./packages/chat-ai && vite"
   },
   "devDependencies": {
     "vite": "^6.0.1"
