--- a/packages/chat-ai/package.json
+++ b/packages/chat-ai/package.json
@@ -8,6 +8,12 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.2",
+    "@ant-design/x": "^1.0.2",
+    "antd": "^5.22.4",
+    "antd-style": "^3.7.1",
+    "dotenv": "^16.4.7",
+    "openai": "^4.76.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
